--- a/apps/website/src/pages/docs/pro/installation/overview.mdx
+++ b/apps/website/src/pages/docs/pro/installation/overview.mdx
@@ -3,11 +3,11 @@ title: Quickstart
 description: Getting started quickly with Saas UI Pro.
 ---
 
+The Saas UI Pro repository contains source code for all components and examples, as well as the starter kit / demo application.
+Get started quickly by cloning the repository and running the demo application.
+
 Saas UI Pro source code ships in a private git repository, the base components are published to a private NPM registry.
 After [redeeming](/redeem) your license key you will receive an invitation to the private Github repository and get access to the NPM registry.
-
-The quickest way to get started is by using the Pro Github repository as a template and [creating a copy](https://github.com/saas-js/saas-ui-pro/generate).
-This will give you a starting point for your app and includes the entire setup with base components, example apps and storybooks with code examples.
 
 If you already have an existing project or want to start from scratch you can install the base components from the privaty NPM registry.
 This will also make it easier to keep everything up to date.
@@ -21,7 +21,7 @@ This will also make it easier to keep everything up to date.
   />
 
   <QuickLink
-    href="/docs/pro/installation/npm"
+    href="/docs/pro/installation/private-npm/overview"
     title="Private NPM"
     description="Setting up the Private NPM registry."
     label="Get started"
