--- a/apps/website/src/pages/docs/pro/installation/private-npm/yarn.mdx
+++ b/apps/website/src/pages/docs/pro/installation/private-npm/yarn.mdx
@@ -1,16 +1,17 @@
 ---
-title: Private NPM using Yarn
-description: Install Saas UI Pro components from a private NPM registry.
+title: Yarn installation instructions
+description: Install Saas UI Pro components from the private NPM registry using Yarn.
 ---
 
 ### Yarn
 
 <Info>
-  This configuration is for **Yarn 3**, if you are still using Yarn 1.2 it's
-  highly recommended to upgrade.
+  This configuration is for **Yarn 3+**, if you are still using Yarn 1.2 it's
+  highly recommended to upgrade. <br />
+  [Migration guide.](https://yarnpkg.com/migration/guide)
 </Info>
 
-Your NPM account is a combination of the Github username (in lower case) you used to redeem your license and the license code (`username:license-key`).
+Your NPM account is a combination of the Github username (in lower case) you used to redeem your license and the license code (`username:license-key`). This key can be shared across your team members.
 
 <NpmAuthToken />
 
