--- a/apps/website/src/pages/docs/pro/installation/run-application.mdx
+++ b/apps/website/src/pages/docs/pro/installation/run-application.mdx
@@ -3,7 +3,7 @@ title: Run the application
 description: How to run the application locally.
 ---
 
-One you have cloned the repository and installed the dependencies, you can run the application with the following command:
+Once you have cloned the repository and installed the dependencies, you can run the application with the following command:
 
 ```bash
 yarn dev:web
