--- a/apps/website/src/pages/docs/pro/installation/private-npm/npm.mdx
+++ b/apps/website/src/pages/docs/pro/installation/private-npm/npm.mdx
@@ -1,6 +1,6 @@
 ---
-title: Private NPM registry
-description: Install Saas UI Pro components from a private NPM registry.
+title: NPM installation instructions
+description: Install Saas UI Pro components from the private NPM registry using NPM.
 ---
 
 In the next steps we'll show you how to install `@saas-ui-pro/react` in new or existing projects.
@@ -17,7 +17,7 @@ You'll need a valid license to install Pro, you can order one [here](/pricing).
 All pro packages can be installed from our private NPM registry at https://npm.saas-ui.dev.
 After [redeeming](/redeem) your license, an account will be automatically created.
 
-Your NPM account is a combination of the Github username (in lower case) you used to redeem your license and the license code (`username:license-key`).
+Your NPM account is a combination of the Github username (in lower case) you used to redeem your license and the license code (`username:license-key`). This key can be shared across your team members.
 
 <NpmAuthToken />
 
