--- a/apps/website/src/pages/docs/pro/installation/private-npm/pnpm.mdx
+++ b/apps/website/src/pages/docs/pro/installation/private-npm/pnpm.mdx
@@ -1,11 +1,11 @@
 ---
-title: Private NPM using PNPM
-description: Install Saas UI Pro components from a private NPM registry.
+title: PNPM installation instructions
+description: Install Saas UI Pro components from the private NPM registry using PNPM.
 ---
 
 ### PNPM
 
-Your NPM account is a combination of the Github username (in lower case) you used to redeem your license and the license code (`username:license-key`).
+Your NPM account is a combination of the Github username (in lower case) you used to redeem your license and the license code (`username:license-key`). This key can be shared across your team members.
 
 <NpmAuthToken />
 
