--- a/apps/website/src/pages/docs/components/authentication/auth/usage.mdx
+++ b/apps/website/src/pages/docs/components/authentication/auth/usage.mdx
@@ -517,6 +517,9 @@ const translations = {
   yourEmail: 'je e-mailadres',
   forgotPassword: 'Wachtwoord vergeten?',
   forgotPasswordSubmit: 'Stuur reset link',
+  forgotPasswordSuccess: 'Wachtwoord reset link verstuurd',
+  forgotPasswordSuccessDescription:
+    'Check je e-mail voor instructies om je wachtwoord te wijzigen.',
   updatePassword: 'Wachtwoord wijzigen',
   updatePasswordSubmit: 'Wachtwoord opslaan',
   backToLogin: 'Terug naar inloggen',
