fix: added missing translations

--- a/apps/website/src/pages/docs/components/authentication/auth/usage.mdx
+++ b/apps/website/src/pages/docs/components/authentication/auth/usage.mdx
@@ -520,6 +520,9 @@ const translations = {
   forgotPasswordSuccess: 'Wachtwoord reset link verstuurd',
   forgotPasswordSuccessDescription:
     'Check je e-mail voor instructies om je wachtwoord te wijzigen.',
+  updatePasswordSuccess: 'Uw wachtwoord is geüpdatet',
+  updatePasswordSuccessDescription:
+    'U kunt nu inloggen met uw nieuwe wachtwoord.',
   updatePassword: 'Wachtwoord wijzigen',
   updatePasswordSubmit: 'Wachtwoord opslaan',
   backToLogin: 'Terug naar inloggen',
