chore: update description

--- a/apps/website/src/pages/blog/building-a-multi-tenant-b2b-saas-with-vite-tanstack-router.mdx
+++ b/apps/website/src/pages/blog/building-a-multi-tenant-b2b-saas-with-vite-tanstack-router.mdx
@@ -2,7 +2,7 @@
 author: 'Eelco Wiersma'
 avatar: /eelco128.jpg
 title: 'Building a multi-tenant B2B SaaS with Vite and Tanstack Router & Query - Part 1: The boilerplate'
-description: "In this article, we'll start building a multi-tenant B2B SaaS using Vite, Tanstack Router & Query, Chakra UI and Saas UI. We'll also cover how to handle multi-tenancy, authentication, and authorization."
+description: "In this article, we'll start building a multi-tenant B2B SaaS using Vite, Tanstack Router & Query, Chakra UI and Saas UI."
 date: '2024-02-23'
 tags:
   ['vite', 'tanstack router', 'react query', 'react', 'saas ui', 'chakra ui']
