chore: fix double sidebar example

--- a/apps/website/src/pages/docs/components/layout/sidebar/usage.mdx
+++ b/apps/website/src/pages/docs/components/layout/sidebar/usage.mdx
@@ -423,7 +423,6 @@ export default function Page() {
             _dark={{
               bg: 'purple.500',
             }}
-            toggleBreakpoint="sm"
           >
             <SidebarSection>
               <Image
@@ -443,7 +442,7 @@ export default function Page() {
               </NavItem>
             </SidebarSection>
           </Sidebar>
-          <Sidebar>
+          <Sidebar toggleBreakpoint="sm">
             <SidebarSection direction="row" mt="2" px="4">
               <Heading size="sm" fontWeight="semibold">
                 Users
