feat: add getBaseField support to zod and yup forms

--- a/apps/website/src/pages/docs/components/advanced-data/data-grid/usage.mdx
+++ b/apps/website/src/pages/docs/components/advanced-data/data-grid/usage.mdx
@@ -742,7 +742,7 @@ import {
   DataGrid,
 } from '@saas-ui-pro/react'
 
-export default function InternalState() {
+export default function SlotProps() {
   return (
     <Page title="Customers" height="400px">
       <PageHeader title="Customers" />
@@ -770,6 +770,61 @@ export default function InternalState() {
         />
       </PageBody>
     </Page>
+  )
+}
+```
+
+### Context Menu
+
+Using `slotsProps` you can use the `as` prop to customize the `tr` element and wrap it with a `ContextMenu`.
+
+```jsx
+import {
+  Page,
+  PageHeader,
+  PageBody,
+  Toolbar,
+  ToolbarButton,
+  DataGrid,
+} from '@saas-ui-pro/react'
+import {
+  ContextMenu,
+  ContextMenuTrigger,
+  ContextMenuList,
+  ContextMenuItem
+} from '@saas-ui/react'
+
+export default function DataGridWithContextMenu() {
+  return (
+    <Page title="Customers" height="400px">
+      <PageHeader title="Customers" />
+      <PageBody p="0" contentWidth="full" position="relative">
+        <DataGrid
+          columns={dataGrid.columns.concat()}
+          data={dataGrid.data.concat()}
+          slotProps={{
+            row: () => ({
+              as: RowWithContext,
+            }),
+          }}
+        />
+      </PageBody>
+    </Page>
+  )
+}
+
+const RowWithContext = (props: TableRowProps) => {
+  return (
+    <ContextMenu>
+      <ContextMenuTrigger>
+        <Tr {...props} />
+      </ContextMenuTrigger>
+      <ContextMenuList>
+        <ContextMenuItem>Edit</MenuItem>
+        <ContextMenuItem>Copy</MenuItem>
+        <ContextMenuItem>Delete</MenuItem>
+      </ContextMenuList>
+    </ContextMenu>
   )
 }
 ```
