--- a/apps/website/src/pages/docs/components/layout/sidebar/usage.mdx
+++ b/apps/website/src/pages/docs/components/layout/sidebar/usage.mdx
@@ -276,9 +276,9 @@ export default function Page() {
 }
 ```
 
-### Condensed variant
+### Compact variant
 
-The compact variant can be used as a collapsed state on smaller screens, or as the primary navigation in a double sidebar layout, see below.
+The `compact` variant can be used as a collapsed state on smaller screens, or as the primary navigation in a double sidebar layout, see below.
 NavItem labels will be rendered as tooltips.
 
 Use the `tooltipProps` prop to customize the tooltip.
