--- a/apps/website/src/pages/docs/components/forms/form/usage.mdx
+++ b/apps/website/src/pages/docs/components/forms/form/usage.mdx
@@ -632,7 +632,15 @@ You can configure a custom base field using the `getBaseField` prop of `createFo
 You can configure `extraProps` that can be passed to the `Field` component and will be available in your custom `BaseField` component.
 
 ```tsx
-import { FormControl, FormLabel, HStack, Tooltip } from '@chakra-ui/react'
+import {
+  Box,
+  FormControl,
+  FormLabel,
+  FormHelpText,
+  FormErrorMessage,
+  HStack,
+  Tooltip,
+} from '@chakra-ui/react'
 import { createForm, useBaseField, splitProps } from '@saas-ui/react'
 import { LuInfo } from 'react-icons/lu'
 
@@ -645,21 +653,32 @@ const getBaseField: GetBaseField<{ infoLabel?: string }> = () => {
         'infoLabel',
       ])
 
-      const { controlProps, labelProps, error } = useBaseField(fieldProps)
+      const { controlProps, label, help, hideLabel, error } =
+        useBaseField(fieldProps)
 
       return (
         <FormControl {...controlProps} isInvalid={!!error}>
-          <HStack alignItems="center" mb="2" spacing="0">
-            <FormLabel mb="0">{labelProps.label}</FormLabel>
-            {infoLabel ? (
-              <Tooltip label={infoLabel}>
-                <span>
-                  <LuInfo />
-                </span>
-              </Tooltip>
+          {!hideLabel ? (
+            <HStack alignItems="center" mb="2" spacing="0">
+              <FormLabel mb="0">{label}</FormLabel>
+              {infoLabel ? (
+                <Tooltip label={infoLabel}>
+                  <span>
+                    <LuInfo />
+                  </span>
+                </Tooltip>
+              ) : null}
+            </HStack>
+          ) : null}
+          <Box>
+            {children}
+            {help && !error?.message ? (
+              <FormHelperText>{help}</FormHelperText>
             ) : null}
-          </HStack>
-          {children}
+            {error?.message && (
+              <FormErrorMessage>{error?.message}</FormErrorMessage>
+            )}
+          </Box>
         </FormControl>
       )
     },
