--- a/apps/website/src/pages/docs/components/advanced-data/data-grid/usage.mdx
+++ b/apps/website/src/pages/docs/components/advanced-data/data-grid/usage.mdx
@@ -236,6 +236,7 @@ export default function ListPage() {
           isSortable
           isSelectable
           isHoverable
+          rowVirtualizer={{ enabled: false }}
           onSelectedRowsChange={setSelections}
           initialState={{
             rowSelection: { 1: true },
@@ -633,7 +634,9 @@ export default function VisibleColumns() {
                   close
                 >
                   {allColumns.map((c) => (
-                    <MenuItemOption value={c}>{c}</MenuItemOption>
+                    <MenuItemOption key={c} value={c}>
+                      {c}
+                    </MenuItemOption>
                   ))}
                 </MenuOptionGroup>
               </MenuList>
@@ -780,6 +783,9 @@ Using `slotsProps` you can use the `as` prop to customize the `tr` element and w
 
 ```jsx
 import {
+  Portal
+} from '@chakra-ui/react'
+import {
   Page,
   PageHeader,
   PageBody,
@@ -813,20 +819,20 @@ export default function DataGridWithContextMenu() {
   )
 }
 
-const RowWithContext = (props: TableRowProps) => {
+const RowWithContext = React.forwardRef<HTMLTableRowElement, TableRowProps>((props: TableRowProps, ref) => {
   return (
-    <ContextMenu>
-      <ContextMenuTrigger>
-        <Tr {...props} />
-      </ContextMenuTrigger>
-      <ContextMenuList>
-        <ContextMenuItem>Edit</MenuItem>
-        <ContextMenuItem>Copy</MenuItem>
-        <ContextMenuItem>Delete</MenuItem>
-      </ContextMenuList>
+    <ContextMenu isLazy>
+      <ContextMenuTrigger as={Tr} ref={ref} {...props}/>
+      <Portal>
+        <ContextMenuList>
+          <MenuItem>Edit</MenuItem>
+          <MenuItem>Copy</MenuItem>
+          <MenuItem>Delete</MenuItem>
+        </ContextMenuList>
+      </Portal>
     </ContextMenu>
   )
-}
+})
 ```
 
 ## Typescript
