--- a/apps/website/src/pages/docs/components/feedback/snackbar/usage.mdx
+++ b/apps/website/src/pages/docs/components/feedback/snackbar/usage.mdx
@@ -111,7 +111,12 @@ The `success` and `error` option accept an optional function that receives the r
 If `error` is a function any errors thrown by the promise will be caught and passed to the function.
 
 ```jsx inline=true
+import { Button } from '@chakra-ui/react'
+import { useSnackbar } from '@saas-ui/react'
+
 export default function SnackbarPromise() {
+  const snackbar = useSnackbar()
+
   return (
     <Button
       onClick={() =>
