chore: update clone instructions

--- a/apps/website/src/pages/docs/pro/installation/clone-repository.mdx
+++ b/apps/website/src/pages/docs/pro/installation/clone-repository.mdx
@@ -10,7 +10,7 @@ In case you have redeemed your license key and accepted the Github invite, you s
 To clone the repository on your local machine, use the following command:
 
 ```bash
-git clone --depth=1 git@github.com:saas-js/saas-ui-pro.git my-project
+git clone --single-branch --branch=main git@github.com:saas-js/saas-ui-pro.git my-project
 ```
 
 This will clone the repository into the `my-project` folder, without the commit history.
