chore: fix stories

--- a/apps/website/src/pages/docs/components/advanced-data/data-grid/usage.mdx
+++ b/apps/website/src/pages/docs/components/advanced-data/data-grid/usage.mdx
@@ -556,7 +556,7 @@ By default all sorting, filtering and pagination is handled locally by `react-ta
 
 This example uses [React Query](https://tanstack.com/query) to fetch data.
 
-```jsx inline=true
+```tsx
 import { Button } from '@chakra-ui/react'
 import {
   Page,
