chore: update clerk docs

--- a/apps/website/src/pages/docs/guides/auth/clerk.mdx
+++ b/apps/website/src/pages/docs/guides/auth/clerk.mdx
@@ -77,6 +77,20 @@ function App({ children }) {
 }
 ```
 
+## Configure Clerk
+
+### Login with Password
+
+To use password authentication, you need to enable `Password` in the Clerk dashboard.
+You can enable this under `Configure > User & Authentication > Email, Phone, Username`.
+
+### Login with email
+
+To use magic link authentication, you need to enable `Email verification link` in the Clerk dashboard.
+You can enable this under `Configure > User & Authentication > Email, Phone, Username`.
+
+## Next steps
+
 That's it! Check the [Auth documentation](/docs/components/authentication/auth) to see how to add authentication screens to your app.
 
 ## Props
