--- a/apps/website/src/pages/docs/core/theming/fonts.mdx
+++ b/apps/website/src/pages/docs/core/theming/fonts.mdx
@@ -10,7 +10,7 @@ Saas UI Core &amp; Pro both use Inter as the default font.
 The easiest way to install is using Font source.
 
 ```bash
-yarn add @fontsource/inter
+yarn add @fontsource-variable/inter
 ```
 
 Then add it to your theme.
@@ -19,7 +19,7 @@ Then add it to your theme.
 import { extendTheme } from '@chakra-ui/react'
 import { theme as baseTheme } from '@saas-ui/react'
 
-import '@fontsource/inter/variable.css'
+import '@fontsource-variable/inter'
 
 // your theme
 ```
@@ -37,13 +37,13 @@ Configure a different font in your theme like this:
 import { extendTheme } from '@chakra-ui/react'
 import { theme as baseTheme } from '@saas-ui/react'
 
-import '@fontsource/montserrar/variable.css'
+import '@fontsource-variable/montserrat'
 
 const theme = extendTheme(
   {
     fonts: {
-      heading: 'MontserratVariable, sans-serif',
-      body: 'MontserratVariable, sans-serif',
+      heading: 'Montserrat Variable, sans-serif',
+      body: 'Montserrat Variable, sans-serif',
     },
   },
   baseTheme
