Update usage.mdx with note on maxFileSize prop

--- a/apps/website/src/pages/docs/components/forms/file-upload/usage.mdx
+++ b/apps/website/src/pages/docs/components/forms/file-upload/usage.mdx
@@ -77,6 +77,8 @@ export default function Basic() {
 
 Set `maxFiles` to increase the amount of accepted files.
 
+You can also set a maximum file size with `maxFileSize`. Note that if the component seems to not be taking your files, you may need to allow larger files or submit a smaller file.
+
 ```jsx
 import { Text, HStack, Button } from '@chakra-ui/react'
 import {
