feat: restructure docs

--- a/apps/website/src/pages/docs/pro/installation/overview.mdx
+++ b/apps/website/src/pages/docs/pro/installation/overview.mdx
@@ -9,8 +9,11 @@ Get started quickly by cloning the repository and running the demo application.
 Saas UI Pro source code ships in a private git repository, the base components are published to a private NPM registry.
 After [redeeming](/redeem) your license key you will receive an invitation to the private Github repository and get access to the NPM registry.
 
-If you already have an existing project or want to start from scratch you can install the base components from the privaty NPM registry.
-This will also make it easier to keep everything up to date.
+<Info>
+  If you already have an existing project or want to start from scratch you can
+  install the base components from the private NPM registry. This will also make
+  it easier to keep everything up to date.
+</Info>
 
 <SimpleGrid columns={[1, null, 2]} spacing={8} mt="8">
   <QuickLink
